--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .logo {
@@ -39,4 +39,31 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+ul {
+  list-style-type: none; /* 기본 점 없애기 */
+  padding: 0; /* 패딩 없애기 */
+}
+
+li {
+  display: flex;
+  justify-content: space-between; /* 각 항목 간의 공간을 분배 */
+  align-items: center; /* 수직 정렬 */
+  margin-bottom: 10px; /* 리스트 아이템 간 간격 조정 */
+}
+
+.todo-content {
+  display: flex;
+  align-items: center; /* 체크박스와 텍스트를 수직 정렬 */
+}
+
+.todo-content input[type="checkbox"] {
+  margin-right: 30px; /* 체크박스와 텍스트 간격 */
+}
+
+.DivAdd{
+  display: flex;
+  justify-content: center;
 }
